<resources>
    <string name="app_name">ImplicitApp</string>
    <string name="title_activity_utama">UtamaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">audio manager</string>
    <string name="menu_gallery">audio recorder</string>
    <string name="menu_slideshow">browser</string>
    <string name="menu_tools">camera</string>

    <string name="menu_email">email</string>
    <string name="phone">phone</string>
    <string name="video">video</string>
    <string name="nav_wifi">wifi</string>
    <string name="tts">tts</string>
    <string name="sms">sms</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="send_email">send email</string>
    <string name="phone_number">nohp</string>
    <string name="inputkan_number">inputkan no hp anda</string>
</resources>
