<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_audiomanager"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_audiorecorder"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_email" />
        <item
            android:id="@+id/nav_phone"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/phone" />
        <item
            android:id="@+id/nav_sms"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sms" />
        <item
            android:id="@+id/nav_tts"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tts" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_video"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/video" />
            <item
                android:id="@+id/nav_wifi"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_wifi" />
        </menu>
    </item>

</menu>
